--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 <section class="section">
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
+    <div class="container is-max-desktop has-text-centered">
         <div class="column is-four-fifths">
             <h2 class="title is-3">Method</h2>
             
